I fixed style problem that launcher　icons are buried a little on IE.
git-svn-id: https://infoscoop.googlecode.com/svn/branches/3.0@934 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/header.css
+++ b/src/main/web/skin/header.css
@@ -48,6 +48,7 @@
 	text-align:center;
 }
 .label{
+	display:inline-block;
 	padding:1px 8px 3px 19px;
 }
 .right{
